<resources>
    <string name="app_name">PagingImplementationComparison</string>
    <string name="search">search</string>
    <string name="error">Error!</string>
    <string name="retry">Retry</string>
    <string name="stub">No data</string>
    <string name="stars_count">stars: %d</string>
    <string name="forks_count">forks: %d</string>
    <string name="issues_count">issues: %d</string>
    <string name="android">Android</string>
</resources>
